updated the gitignore to ignore the generated files

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Don't actually want the graphs to be included in the git
+*.graphml
+*.xlsx 
